# TLOZ

./: CMakeLists.txt  Game.cpp  Game.hpp  Item.cpp  Item.hpp  KeyConfig.cpp  KeyConfig.hpp  Player.cpp  Player.hpp  README.md  SpriteManager.cpp  SpriteManager.hpp  TLOZ  enums.hpp  main.cpp
git/: CMakeLists.txt
git/include/: Game.hpp  Item.hpp  KeyConfig.hpp  Player.hpp  SpriteManager.hpp  enums.hpp
git/src/: Game.cpp  Item.cpp  KeyConfig.cpp  Player.cpp  SpriteManager.cpp  main.cpp
include/: Game.hpp  Item.hpp  KeyConfig.hpp  Player.hpp  SpriteManager.hpp  enums.hpp  utils.hpp
load/: textureToLoad.cfg
sprites/: Baton_boost.cfg
src/: Game.cpp  Item.cpp  KeyConfig.cpp  Player.cpp  SpriteManager.cpp  main.cpp
